Format all files using prettier

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,13 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @layer base {
-    html,
-    body {
-        height: 100%;
-    }
+  html,
+  body {
+    height: 100%;
+  }
 
-    body {
-        margin: 0;
-        font-family: Roboto, "Helvetica Neue", sans-serif;
-    }
+  body {
+    margin: 0;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
+  }
 }
