Override Angular Material styles in conflict with TW

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,10 @@
     font-family: Roboto, 'Helvetica Neue', sans-serif;
   }
 }
+
+@layer components {
+  /* Angular Material Overrides */
+  .mdc-notched-outline__notch {
+    border-right: none;
+  }
+}
