--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,16 @@
   }
 
   body {
+    @apply text-base;
     margin: 0;
     font-family: Roboto, 'Helvetica Neue', sans-serif;
+    @apply bg-gray-300;
+  }
+
+  ::placeholder {
+    /* Use a Tailwind color utility class for consistency */
+    @apply text-gray-400!; /* 'lightgrey' is similar to Tailwind's gray-300 or gray-400 */
+    opacity: 1; /* Some browsers like Firefox have a lower default opacity */
   }
 }
 
@@ -16,5 +24,10 @@
   /* Angular Material Overrides */
   .mdc-notched-outline__notch {
     border-right: none;
+  }
+
+  .mat-mdc-form-field-hint-wrapper ::placeholder,
+  .mat-mdc-input-element::placeholder {
+      @apply text-gray-400;
   }
 }
