Add new components for `dashboard` page

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,11 @@
-<p>dashboard works!</p>
+<div>
+  <app-quick-actions></app-quick-actions>
+  <main>
+    <app-worklist></app-worklist>
+    <app-notepad></app-notepad>
+  </main>
+  <aside>
+    <app-sidebar-widgets></app-sidebar-widgets>
+    <app-recent-patients></app-recent-patients>
+  </aside>
+</div>
