--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
     </main>
 
     <!-- Sidebar -->
-    <aside class="flex w-full flex-col lg:w-80 xl:w-96 gap-3">
+    <aside class="flex w-full flex-col gap-3 lg:w-80 xl:w-96">
       <app-sidebar-widgets></app-sidebar-widgets>
       <app-recent-patients></app-recent-patients>
     </aside>
