--- a/src/app/components/sidebar-widgets/sidebar-widgets.component.html
+++ b/src/app/components/sidebar-widgets/sidebar-widgets.component.html
@@ -1,4 +1,4 @@
-<div class="border-1 border-gray-100 p-6 bg-white rounded-2xl">
+<div class="rounded-2xl border-1 border-gray-100 bg-white p-6">
   <div class="flex flex-wrap justify-start gap-6">
     <button
       *ngFor="let widget of widgets"
