Refactor notepad component UI to use buttons

--- a/src/app/components/notepad/notepad.component.html
+++ b/src/app/components/notepad/notepad.component.html
@@ -1,8 +1,12 @@
 <div class="flex items-center justify-between">
   <h3 class="mb-4 text-lg font-medium text-gray-900">Muistiinpanot</h3>
   <div class="flex items-center space-x-2">
-    <mat-icon class="rounded-2xl bg-gray-200">delete</mat-icon>
-    <mat-icon class="rounded-2xl bg-gray-200">upload</mat-icon>
+    <button class="rounded-2xl bg-gray-200 pt-1">
+      <mat-icon>delete</mat-icon>
+    </button>
+    <button class="rounded-2xl bg-gray-200 pt-1">
+      <mat-icon>upload</mat-icon>
+    </button>
   </div>
 </div>
 
